Updated classes necessary for test function